--- a/frontend/Farmer_App/login.html
+++ b/frontend/Farmer_App/login.html
@@ -10,39 +10,14 @@
       style="background: radial-gradient(at 50%, #ffffff, #bbf7d0); background-attachment: fixed;">
 
   <!-- Navbar -->
-  <header id="siteHeader" class="sticky top-0 z-50 mt-4 transition">
-    <nav class="max-w-7xl mx-auto flex items-center justify-between px-6 py-3 bg-white shadow-md rounded-xl relative">
+  <header class="sticky top-0 z-50 mt-4">
+    <nav class="max-w-7xl mx-auto flex items-center justify-between px-6 py-3 bg-white shadow-md rounded-xl">
       <div class="flex items-center space-x-2">
         <span class="text-green-700 text-2xl">🌱</span>
         <a href="index.html" class="text-2xl font-bold text-green-700">AgroCarbon360</a>
       </div>
-
-      <!-- Desktop Links -->
-      <div class="hidden md:flex items-center space-x-6 font-medium">
-        <a href="index.html" class="px-3 py-1 rounded transition hover:bg-green-600 hover:text-white">Home</a>
-        <a href="features.html" class="px-3 py-1 rounded transition hover:bg-green-600 hover:text-white">Features</a>
-
-        <!-- Portal Dropdown -->
-        <div class="relative group">
-          <button class="px-3 py-1 rounded transition hover:bg-green-600 hover:text-white flex items-center">
-            Portal ▾
-          </button>
-          <div class="absolute left-0 top-full mt-0 w-48 bg-white rounded-lg shadow-lg opacity-0 invisible 
-                      group-hover:opacity-100 group-hover:visible transition duration-200">
-            <a href="farmer.html" class="block px-4 py-2 hover:bg-green-600 hover:text-white">👩‍🌾 Farmer</a>
-            <a href="fpo.html" class="block px-4 py-2 hover:bg-green-600 hover:text-white">🏢 FPO</a>
-            <a href="verifier.html" class="block px-4 py-2 hover:bg-green-600 hover:text-white">🔍 Verifier</a>
-            <a href="admin.html" class="block px-4 py-2 hover:bg-green-600 hover:text-white">⚙️ Admin</a>
-          </div>
-        </div>
-
-        <a href="about.html" class="px-3 py-1 rounded transition hover:bg-green-600 hover:text-white">About Us</a>
-        <a href="contact.html" class="px-3 py-1 rounded transition hover:bg-green-600 hover:text-white">Contact</a>
-        <a href="help.html" class="px-3 py-1 rounded transition hover:bg-green-600 hover:text-white">Help & Support</a>
-      </div>
-
-      <!-- Back Button -->
-      <div class="hidden md:flex">
+      <div class="flex space-x-4 hidden md:flex">
+        <!-- Back Button -->
         <a href="index.html" class="bg-green-600 text-white px-4 py-2 rounded-xl shadow hover:bg-green-700 transition">← Back</a>
       </div>
 
@@ -50,6 +25,7 @@
       <button id="menuBtn" class="md:hidden text-gray-700 text-3xl">☰</button>
     </nav>
   </header>
+
   <!-- Login Section -->
   <main class="flex-1 flex items-center justify-center px-4">
     <div class="bg-white p-10 rounded-2xl shadow-2xl w-full max-w-lg">
@@ -84,12 +60,7 @@
       const users = JSON.parse(localStorage.getItem("users")) || [];
 
       // Find user by email or phone
-      const user = users.find(u => 
-        u["Email ID"] === identifier || 
-        u["Mobile Number"] === identifier || 
-        u["Official Email"] === identifier || 
-        u["Phone Number"] === identifier
-      );
+      const user = users.find(u => u.email === identifier || u.phone === identifier);
 
       if (!user) {
         loginError.textContent = "❌ Account not found. Please sign up.";
@@ -106,18 +77,7 @@
       localStorage.setItem("loggedInUser", JSON.stringify(user));
 
       // Redirect based on role
-      if (user.role === "farmer") {
-        window.location.href = "farmer.html";
-      } else if (user.role === "fpo") {
-        window.location.href = "fpo.html";
-      } else if (user.role === "verifier") {
-        window.location.href = "verifier.html";
-      } else if (user.role === "admin") {
-        window.location.href = "admin.html";
-      } else {
-        // Default fallback
-        window.location.href = "index.html";
-      }
+      window.location.href = user.role + ".html";
     });
   </script>
 </body>
