--- a/frontend/Farmer_App/signup.html
+++ b/frontend/Farmer_App/signup.html
@@ -8,41 +8,15 @@
 </head>
 <body class="font-sans bg-radial-green min-h-screen flex flex-col"
       style="background: radial-gradient(at 50%, #ffffff, #bbf7d0); background-attachment: fixed;">
-
   <!-- Navbar -->
-  <header id="siteHeader" class="sticky top-0 z-50 mt-4 transition">
-    <nav class="max-w-7xl mx-auto flex items-center justify-between px-6 py-3 bg-white shadow-md rounded-xl relative">
+  <header class="sticky top-0 z-50 mt-4">
+    <nav class="max-w-7xl mx-auto flex items-center justify-between px-6 py-3 bg-white shadow-md rounded-xl">
       <div class="flex items-center space-x-2">
         <span class="text-green-700 text-2xl">🌱</span>
         <a href="index.html" class="text-2xl font-bold text-green-700">AgroCarbon360</a>
       </div>
-
-      <!-- Desktop Links -->
-      <div class="hidden md:flex items-center space-x-6 font-medium">
-        <a href="index.html" class="px-3 py-1 rounded transition hover:bg-green-600 hover:text-white">Home</a>
-        <a href="features.html" class="px-3 py-1 rounded transition hover:bg-green-600 hover:text-white">Features</a>
-
-        <!-- Portal Dropdown -->
-        <div class="relative group">
-          <button class="px-3 py-1 rounded transition hover:bg-green-600 hover:text-white flex items-center">
-            Portal ▾
-          </button>
-          <div class="absolute left-0 top-full mt-0 w-48 bg-white rounded-lg shadow-lg opacity-0 invisible 
-                      group-hover:opacity-100 group-hover:visible transition duration-200">
-            <a href="farmer.html" class="block px-4 py-2 hover:bg-green-600 hover:text-white">👩‍🌾 Farmer</a>
-            <a href="fpo.html" class="block px-4 py-2 hover:bg-green-600 hover:text-white">🏢 FPO</a>
-            <a href="verifier.html" class="block px-4 py-2 hover:bg-green-600 hover:text-white">🔍 Verifier</a>
-            <a href="admin.html" class="block px-4 py-2 hover:bg-green-600 hover:text-white">⚙️ Admin</a>
-          </div>
-        </div>
-
-        <a href="about.html" class="px-3 py-1 rounded transition hover:bg-green-600 hover:text-white">About Us</a>
-        <a href="contact.html" class="px-3 py-1 rounded transition hover:bg-green-600 hover:text-white">Contact</a>
-        <a href="help.html" class="px-3 py-1 rounded transition hover:bg-green-600 hover:text-white">Help & Support</a>
-      </div>
-
-      <!-- Back Button -->
-      <div class="hidden md:flex">
+      <div class="flex space-x-4 hidden md:flex">
+        <!-- Back Button -->
         <a href="index.html" class="bg-green-600 text-white px-4 py-2 rounded-xl shadow hover:bg-green-700 transition">← Back</a>
       </div>
 
@@ -50,7 +24,7 @@
       <button id="menuBtn" class="md:hidden text-gray-700 text-3xl">☰</button>
     </nav>
   </header>
-  <!-- Signup Section -->
+
   <main class="flex-1 flex items-center justify-center px-4">
     <div class="bg-white p-10 rounded-2xl shadow-2xl w-full max-w-lg">
       <h3 class="text-3xl font-bold text-green-700 mb-6 text-center">Signup</h3>
@@ -159,17 +133,30 @@
 
       signupForm.onsubmit = (e) => {
         e.preventDefault();
-        const inputs = signupForm.querySelectorAll("input, select");
+        const inputs = signupForm.querySelectorAll("input");
         let userData = { role };
         inputs.forEach(input => {
-          if (input.type !== "checkbox") {
-            userData[input.placeholder || input.name] = input.value;
-          }
+          if (input.placeholder.includes("Name")) userData.name = input.value;
+          if (input.placeholder.includes("Email")) userData.email = input.value;
+          if (input.placeholder.includes("Phone")) userData.phone = input.value;
         });
         localStorage.setItem("tempSignup", JSON.stringify(userData));
         window.location.href = "create-password.html";
       };
     }
   </script>
+
+  <style>
+    .input {
+      width: 100%;
+      padding: 0.75rem 1rem;
+      border: 1px solid #d1d5db;
+      border-radius: 0.75rem;
+      outline: none;
+      transition: box-shadow 0.2s;
+      margin-bottom: 0.5rem;
+    }
+    .input:focus { box-shadow: 0 0 0 2px #10b981; }
+  </style>
 </body>
 </html>
